[build-dependencies]
anyhow = '1.0.31'
cc = '1.0'
fs_extra = '~1.2.0'
ftp = '3.0'
zip = '0.5'

[package]
authors = ['Toshiki Teramura <toshiki.teramura@gmail.com>']
build = 'build.rs'
description = 'Source of FFTW'
edition = '2018'
keywords = ['fftw']
license = 'GPL-2.0-or-later'
links = 'fftw3'
name = 'fftw-src'
repository = 'https://github.com/rust-math/fftw'
version = '0.3.3'
